# asciidoc-nextjs-blog-demo

./: .gitignore  Cargo.toml  README.md  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.js
_img/: .fileList.json
_img/images/: lake_33.json  tree_17.json
_posts/: 2023-06-03-pagination-4.adoc  2023-06-06-asciidoc-syntax-cheatsheet.adoc  2023-06-16-asciidoc-post-preview.adoc  2023-07-06-font-subsetting.adoc  2023-09-25-analemma.adoc  2024-05-04-typeface-comparison.adoc  2024-05-08-tree.adoc  2024-05-15-may-2024-solar-storms.adoc  2024-05-16-typesetting-test.adoc
app/: defaultLayout.tsx  layout.tsx  not-found.tsx  page.tsx  registry.tsx
app/about/: page.tsx
app/components/: button.tsx  catch-links.tsx  hr-title.tsx
app/lib/: asciidoctor-custom-converter.ts  highlight-plugin.ts  parse-post-lead.ts  parse-post.ts
app/posts/: page.tsx
app/projects/: page.tsx
data/adoc/: about.adoc  asciidoc-post-preview.Demo.adoc
scripts/: build-img.js
scripts/font-subset/: Cargo.toml
styles/: fonts-generated.css  fonts.css  globals.scss  highlight.scss
styles/adoc/: _block.scss  _group.scss  _inline.scss  _layout.scss  _misc.scss  _section.scss  index.scss
styles/base/: index.scss
styles/components/: index.scss
styles/utilities/: index.scss
wasm/analemma-helpers/: Cargo.toml  build.rs
wasm/analemma-helpers/pkg/: analemma_helpers.d.ts  analemma_helpers.js  analemma_helpers_bg.js  analemma_helpers_bg.wasm  analemma_helpers_bg.wasm.d.ts  package.json
wasm/analemma-helpers/src/: lib.rs  utils.rs
wasm/parse-video-id/: Cargo.toml
(+39 files in other folders)
