[package]
name = "analemma-helpers"
version = "0.1.0"
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"

[build-dependencies]
native-tls = "0.2"
ureq = { version = "2", default-features = false, features = [
    "native-certs",
    "native-tls",
    "gzip",
] }
